etc/iptables.up.rules
# Generated by iptables-save v1.3.6 on Tue Jun  3 21:11:35 2008
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 192.168.0.101 -p tcp -j REDIRECT
#-A POSTROUTING -s 192.168.0.0/16 -j MASQUERADE
COMMIT
# Completed on Tue Jun  3 21:11:35 2008
# Generated by iptables-save v1.3.6 on Tue Jun  3 21:11:35 2008
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp --icmp-type 4 -j ACCEPT
-A INPUT -p icmp --icmp-type 5 -j ACCEPT
-A INPUT -p icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp --icmp-type 12 -j ACCEPT
-A INPUT -p icmp --icmp-type 8 -m limit --limit 1/sec --limit-burst 4 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 22 -m state --state NEW -m recent --name ssh_attack --set
-A INPUT -p tcp --dport 22 -m state --state NEW -m recent --name ssh_attack --rcheck --seconds 60 --hitcount 5 --rttl -j LOG --log-prefix 'SSH attack: '
-A INPUT -p tcp --dport 22 -m state --state NEW -m recent --name ssh_attack --rcheck --seconds 60 --hitcount 5 --rttl -j DROP
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.0.0/255.255.0.0 -j ACCEPT
COMMIT
# Completed on Tue Jun  3 21:11:35 2008
